[gd_scene load_steps=7 format=2]

[ext_resource path="res://Tests/Viewports/PauseGivenViewport/Textures.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tests/Viewports/GameScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tests/Viewports/PauseGivenViewport/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tests/Viewports/PauseGivenViewport/Main.gd" type="Script" id=4]
[ext_resource path="res://Tests/Viewports/PauseGivenViewport/MainContainer.gd" type="Script" id=5]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("VpMain")

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="VpWorld" type="Viewport" parent="."]
size = Vector2( 320, 240 )

[node name="World" parent="VpWorld" instance=ExtResource( 2 )]

[node name="VpHUD" type="Viewport" parent="."]
size = Vector2( 320, 240 )
transparent_bg = true

[node name="HUD" parent="VpHUD" instance=ExtResource( 3 )]

[node name="VpMain" type="Viewport" parent="."]
size = Vector2( 2000, 2000 )

[node name="Textures" parent="VpMain" instance=ExtResource( 1 )]

[node name="MainContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1000.0
margin_top = -1000.0
margin_right = 1000.0
margin_bottom = 1000.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 1000, 1000 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
size = Vector2( 320, 240 )

[node name="TexMain" type="TextureRect" parent="MainContainer"]
margin_right = 2000.0
margin_bottom = 2000.0
texture = SubResource( 1 )
stretch_mode = 3
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}
